ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: sock-shop
spec:
  ingressClassName: nginx
  rules:
    - host: www.spacel.com
      http:
        paths:
          - pathType: Prefix
            backend:
              service:
                name: front-end
                port:
                  number: 80
            path: /
tls:
  - hosts:
    - www.spacel.com
    secretName: capstone-tls
